--- a/programmers-factory/views/layout.jade
+++ b/programmers-factory/views/layout.jade
@@ -3,18 +3,48 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/chunkfive-fontface.css')
+    link(rel='stylesheet', href='/stylesheets/header.css')
+    link(rel='stylesheet', href='/stylesheets/account-form.css')
   body
-    header
-      nav
-        ul
-          li
-            a(href="/") Home
-          li
-            a(href="/about") About
-          li
-            a(href="/contact") Contact
-          li
-            a(href="/register") Register
+    div#overlay
+        div#account-form
+            div#register.account-split
+                form#registration-form(action="/sign-up")
+                    label.account-label Sign Up
+                    hr.account-hr
+                    input(type="text" placeholder="Email")
+                    input(type="text" placeholder="Username")
+                    input(type="password" placeholder="Password")
+                    input(type="password" placeholder="Repeat password")
+                    button(type="submit" style="margin-top: 10px" data-sitekey="6LdCBCAUAAAAAEX4V2GcfD2p89g_LtgJFrINX2G8").sign-button.account-sign-up-button Sign Up
+            div#login.account-split
+                form#login-form(action="/login")
+                    label.account-label Sign In
+                    hr.account-hr
+                    input(type="text" placeholder="Username")
+                    input(type="password" placeholder="Password")
+                    button(type="submit" style="margin-top: 10px").sign-button.account-sign-in-button Sign In
+
+
+      header#header-wrapper
+        div#header
+            a(href="/")
+              img#logo(src='/images/logo.png')
+            nav#navigation
+                ul
+                  li
+                    a(href="/forum") Forum
+                  li
+                    a(href="/tutorials") Tutorials
+                  li
+                    a(href="/freelance") Freelance jobs
+                  li
+                    a(href="/community") Community
+                  li
+                    a(href="/jobs") Find job
+            div#account
+              img#account-img(src="/images/account.png" onclick="showAccountForm()")
     section#wrapper
       block content
+  script(src="javascripts/account.js")
+  script(src='https://www.google.com/recaptcha/api.js')
